<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Register">

    <EditText
        android:id="@+id/fNameEditTxt"
        android:layout_width="144dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/firstname_hint"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textColorLink="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameHeadTxt" />

    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textColorLink="@color/instructions_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailHeadTxt" />

    <EditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textColorLink="@color/instructions_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordHeadTxt" />

    <EditText
        android:id="@+id/lNameEditTxt"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lastname_hint"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textColorLink="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNameHeadTxt" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_txt"
        android:textColor="@color/instructions_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fNameHeadTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/firstname_head"
        android:textColor="@color/text_color"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

    <TextView
        android:id="@+id/emailHeadTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/email_head"
        android:textColor="@color/text_color"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameEditTxt" />

    <TextView
        android:id="@+id/passwordHeadTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/password_head"
        android:textColor="@color/text_color"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTxt" />

    <TextView
        android:id="@+id/lNameHeadTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="32dp"
        android:text="@string/lastname_head"
        android:textColor="@color/text_color"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="209dp"
        android:layout_height="57dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/create_account_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>