<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="30dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="48dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                android:background="@drawable/black_border"
                app:ccp_defaultNameCode="KE"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_country_code_picker"
                android:hint="@string/phone_no"
                app:boxStrokeColor="@color/text_color"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/hint_color"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:startIconTint="@color/button_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/text_color"
                    android:textCursorDrawable="@null"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/hint_color"
                app:boxStrokeColor="@color/text_color"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/button_color"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/text_color"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/remember_me_chkbx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_centerVertical="true"
                    android:text="@string/remember_me"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/forgot_pwdbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#232C7900"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    app:backgroundTint="#FFFFFF" />

            </RelativeLayout>
            <Button
                android:id="@+id/login_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:background="@color/button_color"
                android:backgroundTint="@color/button_color"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/create_Acc_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_Btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:text="Create Account" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="8dp"
            android:padding="20dp"
            android:visibility="gone">


            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true" />


        </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>